# LLM

./: main.py  pyproject.toml  readme.txt
env/: pyvenv.cfg
